--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "sentinel",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"node server.js\" \"cd ../ && expo start --android\"",
-    "client": "cd ../ && expo start --android",
-    "seed": "node scripts/seedsDB.js",
-    "install": "cd ../ && npm install",
-    "build": "cd ../ && npm run build",
-    "heroku-postbuild": "cd ../ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
-  },
-  "devDependencies": {
-    "concurrently": "^5.1.0"
-  },
+  "name": "sentinel-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "if-env": "^1.0.4",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MR-Stan/Sentinel-API.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MR-Stan/Sentinel-API/issues"
+  },
+  "engines": {
+    "node": "12.13.0"
+  },
+  "homepage": "https://github.com/MR-Stan/Sentinel-API#readme"
 }
